<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/title_information_dialog_calculator"
            style="@style/TextMedium20CoppelCalculator"
            android:background="@color/colorBlueCalculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:gravity="center"
            android:paddingTop="@dimen/title_dialog_privacy_top_calculator"
            android:paddingBottom="@dimen/title_dialog_privacy_top_calculator"
            android:paddingLeft="@dimen/title_dialog_privacy_sides_calculator"
            android:paddingRight="@dimen/title_dialog_privacy_sides_calculator"/>
    <TextView
            style="@style/TextBook14CoppelCalculator"
            android:text="@string/text_information_dialog_calculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            android:layout_marginTop="@dimen/text_dialog_privacy_sides_calculator"
            android:layout_marginStart="@dimen/title_dialog_privacy_sides_calculator"
            android:layout_marginEnd="@dimen/title_dialog_privacy_sides_calculator"/>
    <TextView
            android:text="@string/text2_information_dialog_calculator"
            style="@style/TextBook14CoppelCalculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView12" android:layout_marginStart="24dp"/>
    <TextView
            style="@style/TextBook14CoppelCalculator"
            android:text="@string/text3_information_dialog_calculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/title_dialog_privacy_sides_calculator"
            android:layout_marginEnd="@dimen/title_dialog_privacy_sides_calculator"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
    <TextView
            style="@style/TextBook14CoppelCalculator"
            android:text="@string/text4_information_dialog_calculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/textView14" app:layout_constraintEnd_toEndOf="@+id/textView14"
            android:layout_marginStart="@dimen/title_dialog_privacy_sides_calculator"
            app:layout_constraintTop_toBottomOf="@+id/textView14" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/button_information_dialog_calculator"
            style="@style/ButtonCoppelCalculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            android:layout_marginTop="@dimen/text_privacy_top_calculator"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/button_sides_dialog_calculator"
            android:layout_marginEnd="@dimen/button_sides_dialog_calculator"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/button_bottom_dialog_calculator"/>
</androidx.constraintlayout.widget.ConstraintLayout>