<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    tools:context=".views.fragments.LoanSavingFundMainChildFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_reason_refuse"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                style="@style/TextBold20Coppel"
                android:textColor="@color/colorSecondBlueCoppel"/>

            <TextView
                android:id="@+id/desc"
                android:layout_below="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_refuse"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                style="@style/TextBook14Coppel"
                android:textColor="@color/colorSavingHeaderText"/>

            <EditText
                android:layout_below="@+id/desc"
                android:id="@+id/reason"
                android:layout_width="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:padding="8dp"
                style="@style/TextBook12Coppel"
                android:inputType="text"
                android:importantForAutofill="no"
                android:lines="20"
                android:imeOptions="actionNext"
                android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZÁÉÍÓÚ0123456789,.:;\n "
                android:background="@drawable/background_gray_rounded"
                android:layout_height="120dp" />

            <LinearLayout
                android:id="@+id/layoutBtns"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnActionLeft"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_blue_rounded"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    style="@style/ButtonCoppel"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorBackgroundCoppelBlanco"/>

                <Button
                    android:id="@+id/btnActionRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    style="@style/ButtonCoppel"
                    android:background="@drawable/background_darkgray_rounder"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBackgroundCoppelBlanco"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>